--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -32,11 +32,11 @@ body {
   background-color: white;
 }
 .zu1 {
-  height: 508px;
-  width: 432px;
+  height: 500px;
+  width: 430px;
   border: 4px solid hotpink;
-  margin-left: 1px;
-  margin-right: 1px;
+  /*margin-left: 1px;
+  margin-right: 1px;*/
   background-color: white;
 }
 .memo {
@@ -228,9 +228,9 @@ td {
   <div id="center">
   <svg class="zu1" id="svg1" width="400" height="450">
     <image id="zu1" x="0" y="0" width="100%" height="100%" opacity="1"></image>
-    <div id="watertime_select" align="center">
+    <div id="watertime_select" align="center" style="background-color: lightblue; border: 4px solid greenyellow;">
     <form name="water_form" action="Sample.html">
-    <p><font size="4px" style="font-weight: bold;">水やり時間</font>
+    <font size="4px" style="font-weight: bold;">水やり時間</font>
       <script type="text/javascript">
       //セレクトボックスの作成
       document.write('<select name="water_time">');
@@ -238,7 +238,7 @@ td {
         document.write('<option value="'+i+'"/>'+i+"秒"+'</option>');};
       document.write('</select>');
       </script>
-      <a id="water_control_button" onclick="water_control()" class="btn btn-info">水遣りスタート</a></p>
+      <a id="water_control_button" onclick="water_control()" class="btn btn-info">水遣りスタート</a>
     </form>
     </div>
   </svg></div>
@@ -251,20 +251,25 @@ td {
     </form>
     </div> -->
     <div class="Calendar" align="center">
-      <font size="6px" color="blue" style="font-weight: bold;">アーカイブ</font>
+      <div style="background-color: yellow; border-top: 4px solid royalblue; border-bottom: 4px solid royalblue;">
+        <font size="5px" color="blue" style="font-weight: bold;">アーカイブ</font>
+      </div>
       <div id="cal0" class="cal_wrapper">
         Calendar Loading
       </div>
     </div>
-    <br>
-    <div id="threshold_select" align="center">
+    <div id="threshold_select" align="center" style="background-color: lightblue; border: 4px solid greenyellow;">
     <form name="threshold_form" action="Sample.html">
     <font size="4px" style="font-weight: bold;">水分量閾値</font>
       <input id="threshold" name="threshold" maxlength="4" cols="4" rows="1"></input>
       <a id="threshold_write_button" onclick="threshold_write()" class="btn btn-info">更新</a>
-    </form></div>
+    </form>
+    </div>
     <div id="link_list" align="center">
-      <font size="6px" color="blue" style="font-weight: bold;">リンク</font>
+      <div style="background-color: yellow; border-top: 4px solid royalblue; border-bottom: 4px solid royalblue;">
+      <font size="5px" color="blue" style="font-weight: bold;">リンク</font>
+      </div>
+      <br>
       <a id="pict_list"></a>
       <a id="getdata"></a>
       <a id="mailaddress"></a>
@@ -279,16 +284,17 @@ td {
   d3.select("#pict_list").attr({
     "class": "btn btn-info btn-sm btn-block",
     "href": "{% url 'AIoT:pict_list' %}",
-    "style": "font-size: 1.4em;font-weight: bold;"
+    "style": "font-size: 1.2em;font-weight: bold;"
   }).text("画像一覧");
   d3.select("#getdata").attr({
     "class": "btn btn-info btn-sm btn-block",
     "href": "{% url 'AIoT:getdata' %}",
-    "style": "font-size: 1.4em;font-weight: bold;"
+    "style": "font-size: 1.2em;font-weight: bold;"
   }).text("取得データ一覧");
   d3.select("#mailaddress").attr({
-    "class": "btn btn=info btn-sm btn-block",
+    "class": "btn btn-info btn-sm btn-block",
     "href": "{% url 'AIoT:mailaddress' %}",
+    "style": "font-size: 1.2em;font-weight: bold;"
   }).text("メールアドレス変更");
 
   //画像切り替え用の関数(引数paraは文字列)
