--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -33,7 +33,7 @@ body {
 }
 .zu1 {
   height: 500px;
-  width: 430px;
+  width: 320px;
   border: 4px solid hotpink;
   /*margin-left: 1px;
   margin-right: 1px;*/
@@ -251,7 +251,7 @@ td {
     </form>
     </div> -->
     <div class="Calendar" align="center">
-      <div style="background-color: yellow; border-top: 4px solid royalblue; border-bottom: 4px solid royalblue;">
+      <div style="background-color: khaki; border-top: 4px solid royalblue; border-bottom: 4px solid royalblue;">
         <font size="5px" color="blue" style="font-weight: bold;">アーカイブ</font>
       </div>
       <div id="cal0" class="cal_wrapper">
@@ -266,7 +266,7 @@ td {
     </form>
     </div>
     <div id="link_list" align="center">
-      <div style="background-color: yellow; border-top: 4px solid royalblue; border-bottom: 4px solid royalblue;">
+      <div style="background-color: khaki; border-top: 4px solid royalblue; border-bottom: 4px solid royalblue;">
       <font size="5px" color="blue" style="font-weight: bold;">リンク</font>
       </div>
       <br>
@@ -392,7 +392,7 @@ function make_url(str) {
 
 ///////////////////////////////////////////////////////実行部//////////////////////////////////////////////
 db_get();
-pict_change("zu1");
+pict_change("zu_normal");
 var water;
 var flag_water = false;
 
