チャットの最初の表示の削除

--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -198,7 +198,7 @@ td {
   <div id="left">
   <div class="data_table_scr" id="list">
     <div id="chat-frame">
-      <p class="chat-talk mytalk">
+      <!--<p class="chat-talk mytalk">
         <span class="talk-content">
           {% for i in dataset %}
             {{ i.datetime.year }}年{{ i.datetime.month }}月{{ i.datetime.day }}日{{ i.datetime.hour }}時{{ i.datetime.minute }}分<br>
@@ -207,15 +207,15 @@ td {
             照度：{{ i.illuminance }}</br>
           {% endfor %}
         </span>
-        <span class="talk-content">
+        <span class="talk-content">-->
         <!--<span class="talk-content" id="text">-->
-          本日の水やり時刻は<br>
+          <!--本日の水やり時刻は<br>
           {% for i in watertime %}
           {{i}}<br>
           {% endfor %}
           です。
         </span>
-      </p>
+      </p>-->
     </div>
   </div>
   <form name="js">
