メール変更実装・画像の階層を変更

--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -299,7 +299,7 @@ td {
 
   //画像切り替え用の関数(引数paraは文字列)
   function pict_change(para) {
-    d3.select("#zu1").attr("xlink:href","/site_media/"+para+".jpg");
+    d3.select("#zu1").attr("xlink:href","/site_media/character/"+para+".jpg");
   }
 
   //memoをデータベースに転送
