--- a/AIoT/templates/AIoT/mailconfirm.html
+++ b/AIoT/templates/AIoT/mailconfirm.html
@@ -24,42 +24,38 @@ h3 {
 {% block content %}
   <h3 class="page-header">メールアドレス変更確認</h3>
   <div id="back_main" float="right" display="inline">
+    <a class="btn btn-default btn-sm" href="{% url 'AIoT:mailaddress' %}">変更ページ</a>
     <a class="btn btn-info btn-sm" href="{% url 'AIoT:datalist' %}">メインページ</a>
   </div><br><br>
-  <p><font size="3px" color="black"><br>「変更」ボタンを押下することでメールアドレスの変更が完了します。</font></p>
-    <a id="mailaddress_register_button" onclick="mailaddress_register()" class="btn btn-info btn-block" style="width:50px;">変更</a>
-  </form>
+  <div id="main"></div>
 
   <script type="text/javascript">
-    function getparam(){
-      var query = document.location.search.substring(1);
-      var parameters = query.split('&');
-      var result = new Object();
-      for (var i = 0; i < parameters.length; i++) {
-        var element = parameters[i].split('=');
-        var paramName = decodeURIComponent(element[0]);
-        var paramValue = decodeURIComponent(element[1]);
-        result[paramName] = decodeURIComponent(paramValue);
-      }
-      return result;
+    change = "{{change}}";
+    if(change == "success"){
+      d3.select("#main").append("font").attr({
+        "display":"inline",
+        "float":"left",
+        "size": "5px",
+        "color": "black",
+        "style": "font-weight: bold;",
+      }).text("メールアドレスが変更されました");
+    } else if(change == "failure") {
+      d3.select("#main").append("font").attr({
+        "display":"block",
+        "float":"left",
+        "size": "5px",
+        "color": "black",
+        "style": "font-weight: bold;",
+      }).text("メールアドレスが変更できませんでした");
+      d3.select("#main").append("br")
+      d3.select("#main").append("font").attr({
+        "display":"block",
+        "float":"left",
+        "size": "5px",
+        "color": "black",
+        "style": "font-weight: bold;",
+      }).text("変更ページより再度変更してください");
     }
-    function mailaddress_register(){
-      var key = {{key}};
-      var param = getparam();
-      if (param == key){
-/*        $.ajax({
-          type: 'GET',
-          url: "{% url 'AIoT:mailregister_json' %}" + "?changeaddress=" + "{{newaddress}}",
-          dataType: 'json',
-        });*/
-        console.log("succeed");
-        window.alert("アドレスの変更が完了しました。");
-      }
-      else{
-        console.log("miss");
-        window.alert("アドレスの変更に失敗しました。\nメールアドレス変更ページよりもう一度やり直してください。");
-      }
-    }
-  </script>
 
+  </script>
 {% endblock content %}
