--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -446,6 +446,9 @@ function OnseiGousei(onsei,get) {
   };
   data1 = datax;
   xhr.send(data1);
+  var recstopsec = onsei.length * 300;
+  console.log(recstopsec)
+  setTimeout("Speech_Rec()",recstopsec);
 };
 
 //雑談対話Bot
@@ -523,6 +526,7 @@ function callAPI(hatsuwa,RequestZatsudan){
   };
   request.send(JSON.stringify(body1));
 }
+
 function NotTalkOperation(NotTalkCode){
   if(NotTalkCode.match(/WATERING/)){
       water_control();
@@ -640,14 +644,15 @@ function OnseiHyouji_User_API(value){
     "mode": "dialog"
   }
 
-  //callBot(apiJson3);
-  callAPI(str1,apiJson3);
+  callBot(apiJson3);
+  //callAPI(str1,apiJson3);
 }
 
 //履歴を保存する変数
 var tmp_text = "";
 var i = 0;
 function Speech_Rec(){
+  console.log("Rec_start")
   //ここから音声認識
   //var btn = document.getElementById('btn');
   //var content1 = document.getElementById('content');
@@ -665,10 +670,11 @@ function Speech_Rec(){
   } );*/
   speech.onerror = function(){
     if(speech_status == 0)
-      Speech_Rec();
+      console.log("error")
+      setTimeout(Speech_Rec(),5000);
   }
   speech.onsoundend = function(){
-    Speech_Rec();
+    //Speech_Rec();
   }
   speech.onresult = function(e){
       // ➁音声認識した結果を得る処理
@@ -699,7 +705,7 @@ function Speech_Rec(){
           if(i == 1) {
             getTextContents(text1);
           }
-          Speech_Rec();
+          //Speech_Rec();
     }
   }
 }
@@ -734,13 +740,13 @@ function getTextContents(text1) {
 }
 
 //ページ開始時に水分量を判定(テスト用)
-var MoisJudge = Math.floor( Math.random() * 10 ) ;
+/*var MoisJudge = Math.floor( Math.random() * 10 ) ;
 
 if(MoisJudge == 0){
   OnseiHyouji_User_API("NOTTALKMOISTNO");
 } else{
   OnseiHyouji_User_API("NOTTALKMOISTOK");
-}
+}*/
 
 Speech_Rec();
 </script>
